# cobs-c

./: .gitignore  CMakeLists.txt  COBSClass.cpp  COBSClass.h  COBSCodec.cpp  COBSCodec.h  README.rst  main.cpp
crc/: CMakeLists.txt  checksum.h  crcmfcc.cpp
tests-c/: CMakeLists.txt  TestClass.cpp  TestClass.h  main.c  test.c  test.h
